task8/project-deploy-helm/templates/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: service-postgresql-db
            port:
              number: 5432
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: service-wagtail
            port:
              number: 8000
